monitoring/controllers/influxdb/netpol-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: influx-allow-ops-and-ingress
  namespace: ops-monitoring
spec:
  podSelector: { matchLabels: { app: influxdb } }
  policyTypes: [Ingress]
  ingress:
    - from:
        - namespaceSelector:
            matchLabels: { kubernetes.io/metadata.name: ops-monitoring }
        - namespaceSelector:
            matchLabels: { kubernetes.io/metadata.name: ingress-10 }
      ports:
        - protocol: TCP
          port: 8086
